--- a/WebApp/.ebextensions/nginx.config
+++ b/WebApp/.ebextensions/nginx.config
@@ -1,4 +1,15 @@
 files:
-  /etc/nginx/conf.d/upload.conf:
+  "/tmp/update_nginx_config.sh":
+    mode: "000755"
+    owner: root
+    group: root
     content: |
-      client_max_body_size 100M;
+      #!/bin/bash
+      if ! grep -q 'client_max_body_size' /etc/nginx/nginx.conf; then
+        sed -i '/http {/a \ \ \ \ client_max_body_size 1000M;' /etc/nginx/nginx.conf
+        service nginx reload
+      fi
+
+commands:
+  update_nginx_config:
+    command: "/tmp/update_nginx_config.sh"
